# xhc-viz

./: .gitignore  Makefile  README.md  batch_test.py  batch_viz.py  main.py  manual.md  pyproject.toml  request_and_visualize.py  rid_log_matcher.py  viz_from_logs.py
test_input_from_log/: extract_json.py
utils/: coord_transform.py
