[project]
name = "viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=7.1.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pytest-playwright>=0.7.2",
    "python-docx>=1.2.0",
]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
